# form-checker

./: .env.example  .gitignore  DOCKER_TO_LAYER_INSTRUCTIONS.md  Dockerfile  README.md  package-lock.json  package.json  pyproject.toml  serverless.yml
.github/workflows/: pipeline.yml
form_checker/: Dockerfile  __init__.py  check.py  invoke.py  main.py  settings.py  video.py
form_checker/handlers/: list_videos.py  notify.py  presigned.py  upload.py  version.py
form_checker/utils/: aws.py  filename.py  general.py  process_video.py  video.py
tests/: test_utils_filename.py  test_utils_general.py
